--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.85.9",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
